--- a/Assignment-2.ipynb
+++ b/Assignment-2.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "24caa4a9-7bba-4e24-bbce-eec092b9298c",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3bd6a153-8a11-4a49-ae6e-ea80688687df",
    "metadata": {},
@@ -39,6 +41,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1126a012-c225-44eb-8909-9fdb49d6f66c",
    "metadata": {},
@@ -47,6 +50,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "16c08d11-f5d2-4506-88a2-0c98562868fa",
    "metadata": {},
@@ -55,6 +59,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "dc621d1c-d6aa-4884-9c58-41ec1991e12c",
    "metadata": {},
@@ -72,6 +77,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c0721133-e366-4b6e-b321-eb9201170835",
    "metadata": {},
@@ -80,6 +86,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "86d0879f-f267-414c-a197-2684dcea96c0",
    "metadata": {},
@@ -88,6 +95,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "90cb8013-e181-4866-84cd-ce9f67e8c8b6",
    "metadata": {},
@@ -125,6 +133,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7b68df44-39c3-4209-b6c6-d42919140f3a",
    "metadata": {},
@@ -133,6 +142,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f431e0f7-a864-4bbe-8b02-be552404e5c6",
    "metadata": {},
@@ -141,6 +151,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3f1ef794-c396-40d3-86ac-1c73643bd161",
    "metadata": {},
@@ -163,6 +174,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6b8e2561-a581-4ae3-9457-2a05825a0fb2",
    "metadata": {},
@@ -171,6 +183,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "650a1883-737b-4c89-ab42-23d94a666379",
    "metadata": {},
@@ -200,6 +213,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c2008c52-79ab-448a-aeae-4ccd1da1a86d",
    "metadata": {},
@@ -208,6 +222,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a62b90d1-5ff8-4dfd-b15e-bae76936f94e",
    "metadata": {},
@@ -216,6 +231,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6f2630ba-28da-4fc9-a040-4ac325246bd0",
    "metadata": {},
@@ -253,6 +269,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "05f45e9a-2d7b-4a56-b6be-909c0b8c70df",
    "metadata": {},
@@ -261,6 +278,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8da44343-92f5-4ac9-abf5-b0e5e3252361",
    "metadata": {},
@@ -269,6 +287,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e73089e5-e8b9-448b-a110-e516fd1316db",
    "metadata": {},
@@ -279,6 +298,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "83b8f9ff-73c1-4242-a304-28d7ffc40e56",
    "metadata": {},
@@ -287,6 +307,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8e440ead-d2d2-4276-922c-3be7f83b8eee",
    "metadata": {},
@@ -323,6 +344,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "45062f91-dde5-47f5-8310-66721dd7d13b",
    "metadata": {},
@@ -331,6 +353,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "307d120f-206a-4153-861c-77b66ecfc66c",
    "metadata": {},
@@ -365,6 +388,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e4273293-43aa-4b84-9b3c-816f56d5b6ca",
    "metadata": {},
@@ -373,6 +397,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "09c30913-8114-4307-9739-a3127204fce3",
    "metadata": {},
@@ -412,6 +437,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "551754fa-dbb3-48e2-ae40-c0853731eb3c",
    "metadata": {},
@@ -420,6 +446,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "017a5546-c6f5-4d29-9e71-f0ff27a0ff22",
    "metadata": {},
@@ -430,13 +457,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c5f64b89-89c4-47ae-b7f6-43294e55c2ad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "$"
+    "# Code\n",
+    "is_student = True\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13684dcb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -455,7 +491,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
