--- a/IndvidualAssignments/W5-Assignment1.ipynb
+++ b/IndvidualAssignments/W5-Assignment1.ipynb
@@ -14,9 +14,19 @@
    "metadata": {},
    "source": [
     "Ans :\n",
-    "Exception is the phenomenon in python where a piece of code breaks or does not execute.\n",
+    "In Python, an exception is an event that occurs during program execution, causing the program's normal flow to be disrupted. It can happen due to errors or unexpected conditions. Exceptions allow you to handle these situations gracefully.\n",
     "\n",
-    "Syntax error is when a piece of code is not working because the code if not written properly by following the rules of the language, whereas exception is the error occurs because of other reasons although the syntax is written correctly."
+    "Syntax errors, on the other hand, are errors that occur when the code violates the language's rules. They prevent the program from running and must be fixed before execution.\n",
+    "\n",
+    "Key differences:\n",
+    "\n",
+    "Cause: Exceptions occur during program execution, while syntax errors are due to code violating language rules.\n",
+    "\n",
+    "Timing: Exceptions happen while the program is running, while syntax errors are detected before execution.\n",
+    "\n",
+    "Handling: Exceptions can be caught and handled, allowing you to control program flow and recover from errors. Syntax errors must be fixed in the code.\n",
+    "\n",
+    "Program Flow: Exceptions let you handle errors and continue program execution. Syntax errors prevent program execution until fixed."
    ]
   },
   {
@@ -41,7 +51,7 @@
    "metadata": {},
    "source": [
     "Ans :\n",
-    "When an exception is not handled, the code breaks at the line where the exception happens and next portion of the code does not execute.   "
+    "When an exception is not handled in Python, it results in an error message and stops the program. The error message shows where the problem occurred in the code. Any remaining tasks or instructions are skipped. If the program is part of something bigger, the exception can move up until it reaches the top or a default handler, which might end the program or deal with the exception in a general manner. Handling exceptions is important to handle errors effectively and keep the program running smoothly."
    ]
   },
   {
@@ -417,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
